--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "framer-motion": "^10.16.4",
-    "next": "13.5.4",
+    "next": "^13.4.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-slider": "^2.0.6",
+    "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
